--- a/view/frontend/layout/brands_index_view.xml
+++ b/view/frontend/layout/brands_index_view.xml
@@ -26,6 +26,9 @@
 			<block class="Magerubik\Shopbybrand\Block\Brand\BrandInformation" name="brand.information" template="Magerubik_Shopbybrand::brand/infomation.phtml" />
             <block class="Magerubik\Shopbybrand\Block\Brand\View" name="category.products" template="Magerubik_Shopbybrand::brand/products.phtml">
 				<block class="Magerubik\Shopbybrand\Block\Product\ListProduct" name="category.products.list"  as="product_list" template="Magento_Catalog::product/list.phtml">
+					<arguments>
+						<argument name="viewModel" xsi:type="object">Magento\Catalog\ViewModel\Product\OptionsData</argument>
+					</arguments>
 					<container name="category.product.list.additional" as="additional" />
                     <block class="Magento\Framework\View\Element\RendererList" name="category.product.type.details.renderers" as="details.renderers">
                         <block class="Magento\Framework\View\Element\Template" name="category.product.type.details.renderers.default" as="default"/>
